Replace Collections.singletonList with List.of